CSS transform computed style should not reflect individual transform properties https://bugs.webkit.org/show_bug.cgi?id=217473 <rdar://problem/70091605>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

Add a newly-authored WPT test to check that setting individual transform properties does not interfere with the
computed style for the "transform" property.

* web-platform-tests/css/css-transforms/transform-and-individual-transform-properties-computed-style-expected.txt: Added.
* web-platform-tests/css/css-transforms/transform-and-individual-transform-properties-computed-style.html: Added.

Source/WebCore:

Because RenderStyle::applyTransform() accounts for the new rotate, scale and translate properties, we need a way to call this
method from computedTransform() without accounting for those properties. While we used to only have the option to include or
exclude transform-origin, we now allow for multiple options to be specified using a new TransformOperationOption enum and
passing an OptionSet<TransformOperationOption> to RenderStyle::applyTransform().

Test: imported/w3c/web-platform-tests/css/css-transforms/transform-and-individual-transform-properties-computed-style.html

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::computeTransformedExtentViaMatrix const):
* css/CSSComputedStyleDeclaration.cpp:
(WebCore::computedTransform):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateTransform):
(WebCore::RenderLayer::currentTransform const):
* rendering/RenderLayer.h:
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateTransform):
(WebCore::RenderLayerBacking::getCurrentTransform const):
* rendering/style/RenderStyle.cpp:
(WebCore::requireTransformOrigin):
(WebCore::RenderStyle::applyTransform const):
* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::applyTransform):
* svg/SVGTextElement.cpp:
(WebCore::SVGTextElement::animatedLocalTransform const):


Canonical link: https://commits.webkit.org/230296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268263 268f45cc-cd09-0410-ab3c-d52691b4dbfc